# libmimemail

./: CMakeLists.txt  README.md  TODO.md
cmake/: CMakeLists.txt  LibMimeMailConfig.cmake
debian/: changelog  control  copyright  libmimemail-dev.install  libmimemail-doc.install  libmimemail.install
doc/: CMakeLists.txt  libmimemail.doxy.in
libmimemail/: CMakeLists.txt  attachment.cpp  attachment.h  email.cpp  email.h  exception.h  mail_exchanger.cpp  mail_exchanger.h  names.an  version.cpp  version.h.in
